--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,10 @@ venv/
 # Лог-файлы
 logs/
 *.log
-Output/
-*.txt
 
-# Выходные файлы 
+# Выходные файлы Excel
 Output/
 *.xlsx
-
 
 # Входные ZIP-архивы (если не хотите их версионировать)
 Input/
@@ -50,4 +47,3 @@ Desktop.ini
 
 # Скрытые файлы ОС
 *~                 # Временные файлы, обычно создаваемые редакторами
-
